--- a/index.html
+++ b/index.html
@@ -5,22 +5,210 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/3f1ff61713.js" crossorigin="anonymous"></script>
 
     <title>Hello, world!</title>
 </head>
 
 <body>
+    <header style="background-color: #FFFBF0;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img width="291px" class="" src="images/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item mx-3">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" href="#">Products</a>
+                        </li>
+                        <li class="nav-item mx-">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- main section started from here -->
+    <main>
+        <!-- main banner sec started -->
+        <section class="main-banner py-5" style="background-color: #FFFBF0;">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <h1 class="fs-1 text-sec fw-bold lh-base mb-4">Be the Penguins<br><span class="text-pri">of
+                                Winter</span></h1>
+                        <p class="text-pri">This is simply the printing and typesetting industry. Also I dont know
+                            nothing about this.</p>
+                        <button class="btn main-button text-light fw-bold"><i class="fas fa-shopping-cart me-2"></i>Buy
+                            Now</button>
+                    </div>
+                    <div class="col-lg-6">
+                        <img class="img-fluid" src="images/model.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="woman-jacket container mt-5">
+            <h1 class="mb-5">Woman Jacket</h1>
+            <div class="jackets">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="shadow p-3 mb-5">
+                            <img class="img-fluid bg-light p-5 rounded" src="images/jacket-1.png" alt="">
+                            <h2 class="fs-4 mt-3">Yellow Coat Jacket </h2>
+                            <p>A good product to wear in winter.Its highly recommended in winter season</p>
+                            <div class="bottom-of-card d-flex justify-content-between pb-3">
+                                <h1 class="fs-4">$200</h1>
+                                <button class="btn main-button text-light fw-bold"><i
+                                        class="fas fa-shopping-cart me-2"></i>Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="shadow p-3">
+                            <img class="img-fluid bg-light p-5 rounded" src="images/jacket-2.png" alt="">
+                            <h2 class="fs-4 mt-3">Ladies Jacket</h2>
+                            <p>A good product to wear in winter.Its highly recommended in winter season</p>
+                            <div class="bottom-of-card d-flex justify-content-between pb-3">
+                                <h1 class="fs-4">$290</h1>
+                                <button class="btn main-button text-light fw-bold"><i
+                                        class="fas fa-shopping-cart me-2"></i>Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="shadow p-3">
+                            <img class="img-fluid bg-light p-5 rounded" src="images/jacket-3.png" alt="">
+                            <h2 class="fs-4 mt-3">Woman Leather Jacket</h2>
+                            <p>A good product to wear in winter.Its highly recommended in winter season</p>
+                            <div class="bottom-of-card d-flex justify-content-between pb-3">
+                                <h1 class="fs-4">$399</h1>
+                                <button class="btn main-button text-light fw-bold"><i
+                                        class="fas fa-shopping-cart me-2"></i>Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- man jacket sec -->
+        <section class="man-jacket container mt-5">
+            <h1 class="mb-5">Man Jacket</h1>
+            <div class="jackets">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="shadow p-3">
+                            <img class="img-fluid bg-light p-5 rounded" src="images/jacket-4.png" alt="">
+                            <h2 class="fs-4 mt-3">Snowboard Jacket Mens</h2>
+                            <p>A good product to wear in winter.Its highly recommended in winter season</p>
+                            <div class="bottom-of-card d-flex justify-content-between pb-3">
+                                <h1 class="fs-4">$220</h1>
+                                <button class="btn main-button text-light fw-bold"><i
+                                        class="fas fa-shopping-cart me-2"></i>Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="shadow p-3">
+                            <img class="img-fluid bg-light p-5 rounded" src="images/jacket-5.png" alt="">
+                            <h2 class="fs-4 mt-3">Man Leather Jackets</h2>
+                            <p>A good product to wear in winter.Its highly recommended in winter season</p>
+                            <div class="bottom-of-card d-flex justify-content-between pb-3">
+                                <h1 class="fs-4">$199</h1>
+                                <button class="btn main-button text-light fw-bold"><i
+                                        class="fas fa-shopping-cart me-2"></i>Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="shadow p-3">
+                            <img class="img-fluid bg-light p-5 rounded" src="images/jacket-6.png" alt="">
+                            <h2 class="fs-4 mt-3">Man Casual Jackets</h2>
+                            <p>A good product to wear in winter.Its highly recommended in winter season</p>
+                            <div class="bottom-of-card d-flex justify-content-between pb-3">
+                                <h1 class="fs-4">$240</h1>
+                                <button class="btn main-button text-light fw-bold"><i
+                                        class="fas fa-shopping-cart me-2"></i>Buy
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- last section started from here -->
+        <section class="last-sec container" style="margin-top: 120px;">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-lg-5">
+                    <div class="d-flex align-items-center mb-5 shadow p-3 rounded">
+                        <img class="img-fluid" src="images/house.png" alt="" style="width: 78px;">
+                        <div class="ms-4">
+                            <h5 class="fs-5">Find the Perfect Fit</h5>
+                            <p class="fs-6 m-0">Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center mb-5 shadow p-3 rounded">
+                        <img class="img-fluid" src="images/box.png" alt="" style="width: 79px;">
+                        <div class="ms-4">
+                            <h5 class="fs-5">Free Exchanges</h5>
+                            <p class="fs-6 m-0">One of the many reasons you can shop
+                                with peace of mind.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center mb-5 shadow p-3 rounded">
+                        <img class="img-fluid" src="images/question.png" alt="" style="width: 71px;">
+                        <div class="ms-4">
+                            <h5 class="fs-5">Contact Our Seller</h5>
+                            <p class="fs-6 m-0">They are here to help you. That's quite
+                                literally what we pay them for.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7 ps-5">
+                    <img class="ps-5 img-fluid" src="images/shopping.png" alt="" style="width: 599px;">
+                </div>
+            </div>
+
+        </section>
+    </main>
 
 
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+    <!-- Option 1: Bootstrap Bundle -->
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
