--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/3f1ff61713.js" crossorigin="anonymous"></script>
 
-    <title>Hello, world!</title>
+    <title>Penguin Fashion</title>
 </head>
 
 <body>
